fraud_user fix